# IMP-Projekt-Komprimierung

./: main.py  pyproject.toml
